--- a/src/resource-item.html
+++ b/src/resource-item.html
@@ -1,9 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/paper-rating/paper-rating.html">
-
-<dom-module id="resource-item">
+<html><head><meta charset="UTF-8"><link rel="import" href="polymer-learning-resources-app.html"></head><body><dom-module id="resource-item">
 
     <template>
 
@@ -98,7 +93,7 @@
         <div class="pic" style$="background-image: url([[resource.imageUrl]]);"></div>
         <h2 class="link">[[resource.title]]</h2>
         <span class="rating">
-            <paper-rating rating="[[resource.rating]]" disabled></paper-rating>
+            <paper-rating rating="[[resource.rating]]" disabled=""></paper-rating>
         </span>
 
         <div class="location">
@@ -108,22 +103,7 @@
 
     </template>
 
-    <script>
-
-        Polymer({
-
-            is: 'resource-item',
-
-            properties: {
-
-                resource: {
-                    type: Object
-                }
-
-            }
-
-        });
-
-    </script>
+    <script>Polymer({is:"resource-item",properties:{resource:{type:Object}}});</script>
 
 </dom-module>
+</body></html>
