Fixed typo and added link to source code

--- a/src/polymer-learning-resources-app.html
+++ b/src/polymer-learning-resources-app.html
@@ -2879,7 +2879,7 @@ return mt(n,ot(t,!0))},Nn.memoize=ae,Nn.merge=Eo,Nn.method=Xo,Nn.methodOf=Ho,Nn.
                     <div class="location">
                         <h3>Disclaimer</h3>
                         <p>The rating of this resource is solely my opinion and it is based on the extra knowledge I got from it, taken into the consideration resource quality and price.</p>
-                        <p>No rating means I haven't got time go though it but I consider doing so.</p>
+                        <p>No rating means I haven't got time go through it but I consider doing so.</p>
                     </div>
                 </div>
             </div>
@@ -3120,7 +3120,9 @@ return mt(n,ot(t,!0))},Nn.memoize=ae,Nn.merge=Eo,Nn.method=Xo,Nn.methodOf=Ho,Nn.
                     <app-toolbar class="profileBar">
                         <img class="profilePic" src="https://s.gravatar.com/avatar/5bde3a9f072f038711aab04c1ea5b924?s=80" width="30" height="30">
                         <div class="profileName">Radu Enuca</div>
-                        <paper-icon-button icon="social:public" aria-label="Github"></paper-icon-button>
+                        <a href="https://github.com/raduenuca/polymer-learning-resources" target="_blank" tabindex="-1" title="Source code" aria-label="Navigate to source code">
+                            <paper-icon-button icon="social:public" aria-label="Github"></paper-icon-button>
+                        </a>
                     </app-toolbar>
                     <div class="list">
                         <template is="dom-repeat" items="[[categories]]" as="category" initial-count="1">
