--- a/src/resource-detail.html
+++ b/src/resource-detail.html
@@ -243,7 +243,7 @@
                     <div class="location">
                         <h3>Disclaimer</h3>
                         <p>The rating of this resource is solely my opinion and it is based on the extra knowledge I got from it, taken into the consideration resource quality and price.</p>
-                        <p>No rating means I haven't got time go though it but I consider doing so.</p>
+                        <p>No rating means I haven't got time go through it but I consider doing so.</p>
                     </div>
                 </div>
             </div>
