Fixed a typo and added link to source code

--- a/src/polymer-learning-resources-app.html
+++ b/src/polymer-learning-resources-app.html
@@ -257,7 +257,9 @@
                              src="https://s.gravatar.com/avatar/5bde3a9f072f038711aab04c1ea5b924?s=80" width="30"
                              height="30">
                         <div class="profileName">Radu Enuca</div>
-                        <paper-icon-button icon="social:public" aria-label="Github"></paper-icon-button>
+                        <a href="https://github.com/raduenuca/polymer-learning-resources" target="_blank" tabindex="-1" title="Source code" aria-label="Navigate to source code">
+                            <paper-icon-button icon="social:public" aria-label="Github"></paper-icon-button>
+                        </a>
                     </app-toolbar>
                     <div class="list">
                         <template is="dom-repeat" items="[[categories]]" as="category" initial-count="1">
